--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=f118cb7bf6e6cbc81452",
+    "/css/app.css": "/css/app.css?id=67e1a959ad88c3bdaf5d"
 }
